--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
         "api"
     ],
     "homepage": "http://developer.circulodecredito.com.mx",
+    "license": "proprietary",
+    "authors": [
+        {
+            "name": "ReportarEnLinea and contributors",
+        }
+    ],
     "require": {
         "php": ">=5.5",
         "ext-curl": "*",
@@ -23,9 +29,9 @@
         "friendsofphp/php-cs-fixer": "~2.12"
     },
     "autoload": {
-        "psr-4": { "APIHub\\Client\\" : "lib/" }
+        "psr-4": { "ReportarEnLinea\\Client\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "APIHub\\Client\\" : "test/" }
+        "psr-4": { "ReportarEnLinea\\Client\\" : "test/" }
     }
 }
